Version 0.8.8   - xx January 2002
  * Add -0/--abstract option to warn that subclass should override
        a base class whose method(s) only raise exceptions
  * Add -7/--slots option to warn about __slots__ usage problems
  * Add --emptyslots option to warn about empty __slots__
  * Add check if __getattr[ibute]__ returns None, should raise an exception
  * Allow pychecker to be imported (in your code do: import pychecker.check)
  * Using vars() for format string argument works like locals()
  * Make unusedNames a prefix, so emptyVal, unusedVal, etc are also ignored
  * Fix -a/--initattr warning to actually warn when attributes 
        are set outside of __init__(), but not in __init__()
  * Fix case where an implicit return did not generate a warning
  * Fix spurious warnings when using nested scopes, code should be checked now
  * Fix spurious warnings for unreachable code (not enough to enable, yet)
  * Fix spurious warnings for integer division from:  (x + 100.0) / 10
  * Fix spurious warnings for implicit returns when raise in except: clause
  * Fix various spurious warnings when using Python 2.2
  * Fix spurious warning for overridden method mismatch when using exec

Version 0.8.7   - 05 January 2002
  * Add -2/--constcond option to warn if using a constant 
        in a conditional statement (if '': ; while 'str': ; etc)
  * Add -1/--constant1 option to warn when using if 1: or while 1: etc.
  * Add -8/--unreachable option to warn about unreachable code
  * Add -9/--members option to warn about unused data members
  * Add -w/--shadow for local variable shadowing global variable
  * Add warning statements with no effect (load var, but do nothing)
  * Handle string multiplication (helps format strings)
        code like this doesn't generate a warning now:  '%d ' * 3 % (1, 2, 3)
  * Fix -C/--implicitreturns option so it works, turn it on by default
  * Fix spurious warning when accessing 'static' class members that are methods