@@ -60,6 +60,7 @@ _OPTIONS = (
  ('U', 0, 'reuseattr', 'redefiningFunction', 'check if function/class/method names are reused'),
  ('Y', 0, 'positive', 'unaryPositive', 'check if using unary positive (+) which is usually meaningless'),
  ('j', 0, 'moddefvalue', 'modifyDefaultValue', 'check if modify (call method) on a parameter that has a default value'),
+ ('6', 0, 'exec', 'usesExec', 'check if the exec statement is used (possible security problems'),
      ]),
     ('Possible Errors', [
  ('r', 0, 'returnvalues', 'checkReturnValues', 'check consistent return values'),
@@ -232,6 +233,7 @@ class Config :
         self.shadows = 1
         self.unaryPositive = 1
         self.modifyDefaultValue = 1
+        self.usesExec = 0
 
     def loadFile(self, filename) :
         suppressions = {}
