@@ -1,6 +1,7 @@
 Version 0.8.8   - xx January 2002
   * Add -0/--abstract option to warn that subclass should override
         a base class whose method(s) only raise exceptions
+  * Add -6/--exec option to warn when using the exec statement
   * Add -7/--slots option to warn about __slots__ usage problems
   * Add --emptyslots option to warn about empty __slots__
   * Add check if __getattr[ibute]__ returns None, should raise an exception
